# TASK-18

./: .gitignore  metadata.json
repo/backend/: Cargo.toml  Dockerfile
repo/backend/config/: mod.rs
repo/backend/logging/: mod.rs
repo/backend/migrations/: 001_initial.sql
repo/backend/src/: config.rs  db.rs  errors.rs  lib.rs  logging.rs  main.rs
repo/backend/src/middleware/: auth.rs  mod.rs  rate_limit.rs  rbac.rs  request_logger.rs  risk.rs
repo/backend/src/models/: audit.rs  backup.rs  cart.rs  common.rs  custom_field.rs  mod.rs  order.rs  payment.rs  product.rs  rating.rs  review.rs  taxonomy.rs  user.rs
repo/backend/src/routes/: admin.rs  audit.rs  auth.rs  backup.rs  cart.rs  custom_fields.rs  leaderboards.rs  mod.rs  orders.rs  payment.rs  products.rs  ratings.rs  reports.rs  reviews.rs  taxonomy.rs  users.rs
repo/backend/src/services/: audit_service.rs  auth_service.rs  backup_service.rs  encryption_service.rs  field_migration_service.rs  mod.rs  order_service.rs  order_state_machine.rs  payment_simulator.rs  rating_service.rs  retention_service.rs  review_service.rs  taxonomy_service.rs
repo/backend/tests/api/: common.rs  mod.rs  test_admin_api.rs  test_auth_api.rs  test_cart_api.rs  test_field_conflict_workflow.rs  test_health_api.rs  test_object_authz.rs  test_order_api.rs  test_product_api.rs  test_rating_api.rs  test_rbac_api.rs  test_review_api.rs  test_risk_event_schema.rs  test_taxonomy_api.rs  test_user_api.rs
repo/backend/tests/unit/: mod.rs  test_audit_service.rs  test_auth.rs  test_backup_service.rs  test_contract.rs  test_encryption.rs  test_leaderboard_tiebreak.rs  test_middleware_request_logger.rs  test_middleware_risk.rs  test_order_service.rs  test_order_state_machine.rs  test_password_policy.rs  test_payment_simulator.rs  test_rate_limit.rs  test_rating_aggregation.rs  test_rbac.rs  test_retention_service.rs  test_review_service.rs  test_taxonomy_service.rs
repo/frontend/: Cargo.toml  Dockerfile  Trunk.toml  index.html  nginx.conf
repo/frontend/src/: app.rs  config.rs  lib.rs  main.rs  store.rs  types.rs
repo/frontend/src/api/: admin.rs  auth.rs  cart.rs  client.rs  mod.rs  orders.rs  products.rs  ratings.rs  reviews.rs
repo/frontend/src/components/: loading.rs  mod.rs  navbar.rs  pagination.rs  product_card.rs  rating_stars.rs  toast.rs
repo/frontend/src/pages/: cart.rs  checkout.rs  home.rs  leaderboards.rs  login.rs  mod.rs  order_detail.rs  orders.rs  product_detail.rs  (+2 more)
repo/frontend/styles/: main.css
(+50 files in other folders)
