[package]
name = "silverscreen-backend"
version = "1.0.0"
edition = "2021"
description = "SilverScreen Commerce & Review Platform - Backend API"

[dependencies]
# Web framework
actix-web = "4"
actix-rt = "2"
actix-cors = "0.7"
actix-multipart = "0.6"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate", "bigdecimal"] }
bigdecimal = "0.3"

# Authentication
jsonwebtoken = "9"
argon2 = "0.5"

# Encryption
aes-gcm = "0.10"
base64 = "0.21"
rand = "0.8"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Logging
log = "0.4"
env_logger = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-actix-web = "0.7"

# Pinned transitive dependencies (indexmap >=2.8 requires edition2024 / Rust 1.85+)
indexmap = "=2.7.1"

# Utilities
sha2 = "0.10"
hex = "0.4"
regex = "1"
once_cell = "1"
dashmap = "5"
futures = "0.3"
mime = "0.3"

[dev-dependencies]
actix-test = "0.1"
reqwest = { version = "0.11", features = ["json"] }
tempfile = "3"
serial_test = "3"
